--- a/package/src/renderer/@styles/font.css
+++ b/package/src/renderer/@styles/font.css
@@ -1,6 +1,7 @@
 @font-face {
-  font-family: 'Fira Code';
-  src: url('woff2/FiraCode-Light.woff2') format('woff2'),
+  font-family: "Fira Code";
+  src:
+    url("woff2/FiraCode-Light.woff2") format("woff2"),
     url("woff/FiraCode-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
@@ -8,8 +9,9 @@
 }
 
 @font-face {
-  font-family: 'Fira Code';
-  src: url('woff2/FiraCode-Regular.woff2') format('woff2'),
+  font-family: "Fira Code";
+  src:
+    url("woff2/FiraCode-Regular.woff2") format("woff2"),
     url("woff/FiraCode-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
@@ -17,8 +19,9 @@
 }
 
 @font-face {
-  font-family: 'Fira Code';
-  src: url('woff2/FiraCode-Medium.woff2') format('woff2'),
+  font-family: "Fira Code";
+  src:
+    url("woff2/FiraCode-Medium.woff2") format("woff2"),
     url("woff/FiraCode-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
@@ -26,8 +29,9 @@
 }
 
 @font-face {
-  font-family: 'Fira Code';
-  src: url('woff2/FiraCode-SemiBold.woff2') format('woff2'),
+  font-family: "Fira Code";
+  src:
+    url("woff2/FiraCode-SemiBold.woff2") format("woff2"),
     url("woff/FiraCode-SemiBold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
@@ -35,8 +39,9 @@
 }
 
 @font-face {
-  font-family: 'Fira Code';
-  src: url('woff2/FiraCode-Bold.woff2') format('woff2'),
+  font-family: "Fira Code";
+  src:
+    url("woff2/FiraCode-Bold.woff2") format("woff2"),
     url("woff/FiraCode-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
@@ -44,10 +49,11 @@
 }
 
 @font-face {
-  font-family: 'Fira Code VF';
-  src: url('woff2/FiraCode-VF.woff2') format('woff2-variations'),
-       url('woff/FiraCode-VF.woff') format('woff-variations');
-  /* font-weight requires a range: https://developer.mozilla.org/en/docs/Web/CSS/CSS_Fonts/Variable_Fonts_Guide#Using_a_variable_font_font-face_changes */
+  font-family: "Fira Code VF";
+  src:
+    url("woff2/FiraCode-VF.woff2") format("woff2-variations"),
+    url("woff/FiraCode-VF.woff") format("woff-variations");
+
   font-weight: 300 700;
   font-style: normal;
   font-display: swap;
