--- a/package/src/renderer/styles/base.css
+++ b/package/src/renderer/styles/base.css
@@ -23,6 +23,7 @@
     corner-shape: squircle;
     -webkit-corner-shape: squircle;
     -electron-corner-smoothing: system-ui;
+    border: var(--border);
   }
   body {
     overflow: hidden;
