--- a/package/src/renderer/lib/editor/styles/editor.css
+++ b/package/src/renderer/lib/editor/styles/editor.css
@@ -44,8 +44,9 @@
 .tiptap h5,
 .tiptap h6 {
   font-weight: 600;
-  line-height: 1.3;
-  margin-top: 1.5em;
+  line-height: 1.6;
+  margin-bottom: 0;
+  margin-top: 1em;
   margin-bottom: 0.5em;
 }
 
