--- a/package/src/renderer/styles/base.css
+++ b/package/src/renderer/styles/base.css
@@ -24,6 +24,8 @@
     -webkit-corner-shape: squircle;
     -electron-corner-smoothing: system-ui;
     border: var(--border);
+    color: var(--foreground);
+    background-color: transparent;
   }
   body {
     overflow: hidden;
